--- a/KekeMed-opc-provider/pom.xml
+++ b/KekeMed-opc-provider/pom.xml
@@ -3,25 +3,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-                            http://maven.apache.org/xsd/maven-4.0.0.xsd">
+                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>KekeMed-server</artifactId>
+  <artifactId>KekeMed-opc-provider</artifactId>
 
   <packaging>jar</packaging>
 
   <parent>
-    <artifactId>KekeMed-parent</artifactId>
     <groupId>com.longxiang.kekemed</groupId>
+    <artifactId>KekeMed-parent</artifactId>
     <version>1.0.0</version>
   </parent>
 
-
   <dependencies>
     <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+      <groupId>com.longxiang.kekemed</groupId>
+      <artifactId>KekeMed-data-commons</artifactId>
+      <version>${parent.version}</version>
     </dependency>
   </dependencies>
-
 </project>
