--- a/KekeMed-emr-provider/pom.xml
+++ b/KekeMed-emr-provider/pom.xml
@@ -6,21 +6,22 @@
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>KekeMed-server</artifactId>
+  <artifactId>KekeMed-emr-provider</artifactId>
 
   <packaging>jar</packaging>
 
   <parent>
-    <artifactId>KekeMed-parent</artifactId>
     <groupId>com.longxiang.kekemed</groupId>
+    <artifactId>KekeMed-parent</artifactId>
     <version>1.0.0</version>
   </parent>
 
 
   <dependencies>
     <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+      <groupId>com.longxiang.kekemed</groupId>
+      <artifactId>KekeMed-data-commons</artifactId>
+      <version>${parent.version}</version>
     </dependency>
   </dependencies>
 
