--- a/KekeMed-server/src/main/resources/application.properties
+++ b/KekeMed-server/src/main/resources/application.properties
@@ -7,4 +7,4 @@ eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
-eureka.client.service-url.defautZone=http://${eureka.instance.hostname}:${server.port}/eruka
+eureka.client.service-url.defautZone=http:/${eureka.instance.hostname}:${server.port}/eureka
