修改了部分配置并添加了 Token 生成类

--- a/KekeMed-commons/src/main/resources/prop.base/base.properties
+++ b/KekeMed-commons/src/main/resources/prop.base/base.properties
@@ -1,7 +1,15 @@
 base.page.num=1
 base.page.size=10
 
-base.response.success=2000
-base.response.unauth=4000
-base.response.failure=6000
-base.response.exception=5000
+base.response.success=20000
+base.response.unauth=30000
+base.response.failure=40000
+base.response.exception=50000
+
+##### ???
+base.status.enable=Y
+base.status.disable=N
+
+##### token
+base.token.key=carpe diem
+base.token.expire=1800
